--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">android-loading-demo</string>
+    <string name="request_btn">请求网络数据</string>
+    <string name="show_result">最终的学生数据</string>
+    <string name="mvp_btn">MVP 事例</string>
 </resources>
